[gd_scene load_steps=32 format=2]

[ext_resource path="res://titlescreen/scripts/titlescreen.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/city_night/sprite_0.png" type="Texture" id=2]
[ext_resource path="res://backgrounds/city_night/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://backgrounds/city_night/sprite_2.png" type="Texture" id=4]
[ext_resource path="res://backgrounds/city_night/sprite_3.png" type="Texture" id=5]
[ext_resource path="res://backgrounds/city_night/sprite_4.png" type="Texture" id=6]
[ext_resource path="res://backgrounds/city_night/sprite_5.png" type="Texture" id=7]
[ext_resource path="res://backgrounds/city_night/sprite_6.png" type="Texture" id=8]
[ext_resource path="res://run_anim.tres" type="Texture" id=9]
[ext_resource path="res://animations/idle/sprite_00.png" type="Texture" id=10]
[ext_resource path="res://animations/idle/sprite_01.png" type="Texture" id=11]
[ext_resource path="res://animations/idle/sprite_02.png" type="Texture" id=12]
[ext_resource path="res://animations/idle/sprite_03.png" type="Texture" id=13]
[ext_resource path="res://animations/idle/sprite_04.png" type="Texture" id=14]
[ext_resource path="res://animations/idle/sprite_05.png" type="Texture" id=15]
[ext_resource path="res://animations/idle/sprite_06.png" type="Texture" id=16]
[ext_resource path="res://animations/idle/sprite_07.png" type="Texture" id=17]
[ext_resource path="res://animations/idle/sprite_08.png" type="Texture" id=18]
[ext_resource path="res://animations/idle/sprite_09.png" type="Texture" id=19]
[ext_resource path="res://buttons/PlayButton.tscn" type="PackedScene" id=20]
[ext_resource path="res://buttons/TutorialButton.tscn" type="PackedScene" id=21]
[ext_resource path="res://buttons/OptionsButton.tscn" type="PackedScene" id=22]
[ext_resource path="res://buttons/ExitButton.tscn" type="PackedScene" id=23]
[ext_resource path="res://fonts/ROBO.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=25]
[ext_resource path="res://select2.wav" type="AudioStream" id=26]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 10
fps = 8.0
frame_0/texture = ExtResource( 10 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 14 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 15 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 16 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 17 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 18 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 19 )
frame_9/delay_sec = 0.0

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/Viking Hell.otf"

[sub_resource type="DynamicFont" id=5]
size = 256
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 24 )

[node name="Titlescreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.36035
margin_top = -1.36038
margin_right = -1.36035
margin_bottom = -1.36035
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 961.108, 541.138 )
scale = Vector2( 0.666542, 0.666375 )
frames = SubResource( 3 )
frame = 4
playing = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Selector1" type="TextureRect" parent="."]
margin_left = 101.42
margin_top = 451.972
margin_right = 172.42
margin_bottom = 518.972
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="Selector2" type="TextureRect" parent="."]
visible = false
margin_left = 101.42
margin_top = 532.814
margin_right = 172.42
margin_bottom = 599.814
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="Selector3" type="TextureRect" parent="."]
visible = false
margin_left = 101.42
margin_top = 610.972
margin_right = 172.42
margin_bottom = 677.972
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="Selector4" type="TextureRect" parent="."]
visible = false
margin_left = 101.42
margin_top = 694.855
margin_right = 172.42
margin_bottom = 761.855
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="Characters" type="TextureRect" parent="."]
margin_left = 1127.0
margin_top = 370.0
margin_right = 1366.0
margin_bottom = 917.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 446.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.807843, 0.262745, 0.262745, 1 )
custom_colors/font_color_shadow = Color( 0.541176, 0.0470588, 0.0470588, 1 )
custom_constants/shadow_offset_x = 7
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 2
text = "FLAMER"
align = 1
valign = 1

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 189.0
margin_top = 459.0
margin_right = 900.0
margin_bottom = 1032.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 711.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 711.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 20 )]
margin_right = 711.0
margin_bottom = 60.0

[node name="TutorialButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 21 )]
margin_top = 80.0
margin_right = 711.0
margin_bottom = 140.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 22 )]
margin_top = 160.0
margin_right = 711.0
margin_bottom = 220.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 23 )]
margin_top = 240.0
margin_right = 711.0
margin_bottom = 300.0

[node name="Version" type="Label" parent="Menu"]
margin_top = 304.0
margin_right = 711.0
margin_bottom = 573.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Version 1.0
MrEliptik"
valign = 2

[node name="FadeIn" parent="." instance=ExtResource( 25 )]
visible = false

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
mix_target = 2
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
